@@ -1,4 +1,4 @@
-version = "0.9.4"
+version = "0.9.5-pre"
 
 if __name__ == "__main__":
     print version
